# cell-model-cuda-example

./: .clang-format  LICENCE  README.md
models/: .gitignore  Makefile  TP06.ode
src/: CMakeLists.txt  Makefile  TP06.cu  cli.c  cli.ggo  cli.h
src/cmake/: detect_compute_capabilities.cu
